# AxiomOS

./: .gitignore  AxiomOS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  build.zig  config.fish  specs.txt  test_sysv.cpp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bootloader/: main.zig
cmake/: toolchain.cmake
docs/: ARCHITECTURE.md  Architecture.md  BUILD.md  CODING_STANDARDS.md  Coding_Standards.md  Phase_ONE.md  ROADMAP.md  architecture_proposal.md  axiom_vfs_spec.md  build_system_design.md  fish_shell_spec.md  hardware_info.md  plugin_io_spec.md  pmm_design.md  registry_architecture.md  registry_spec.md  sentinel_spec.md  vmm_design.md
docs/hardware/: cpu.txt  disks.txt  memory.txt  pci.txt  usb.txt
include/axiom/: boot_info.h  elf.h  memory.h  syscall.h
include/axiom/arch/x64/: cpu.hpp  idt.hpp  io.hpp  paging.hpp
include/axiom/arch/x64/private/: gdt.hpp
include/axiom/boot/: elf.hpp  info.hpp  uefi.hpp
include/axiom/drivers/: serial.hpp
include/axiom/mm/: allocator.hpp
include/axiom/tests/: pmm.hpp
include/axiomos/: bootinfo.hpp  elf.hpp  uefi.hpp  x86_64.hpp
include/axiomos/arch/x86_64/: apic.hpp  cpuid.hpp  io.hpp
include/axiomos/mm/: allocator.hpp  pmm.hpp  vmm.hpp
include/axiomos/utils/: io.hpp  serial.hpp
kernel/: README.md  build.zig  linker.ld
kernel/src/: main.zig  serial.zig
kernel/src/arch/: entry.zig  x86_64.zig
kernel/src/mm/: allocator.zig
lib/core/: paging.cpp  paging.h  pmm.cpp  pmm.h
loader/: .gitignore  Cargo.toml  README.md  log.txt
loader/src/: handoff.rs  main.rs
src/bootloader/: main.cpp
src/kernel/: linker.ld  main.cpp
src/kernel/arch/x64/: apic.cpp  cpu.cpp  entry.S  gdt.S  gdt.cpp  idt.cpp  interrupts.S  paging.cpp
src/kernel/arch/x86_64/: apic.cpp  entry.S  x86_64.cpp
src/kernel/drivers/: serial.cpp
src/kernel/mm/: allocator.cpp  vmm.cpp
src/kernel/sentinel/: internal.h  main.cpp  memory.cpp  memory.h
src/kernel/tests/: pmm.cpp
src/kernel/utils/: serial.cpp
tests/: pmm_test.cpp
tools/: run-qemu.sh  run_qemu.sh
